# mfem_examples

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp  tests.txt
1D/: CMakeLists.txt  affichage_python.py  main.cpp
1D/ElectroStatique/: CMakeLists.txt  main.cpp
2D/: main.cpp
2D/paralell/: CMakeLists.txt  main.cpp
2D/serial/: CMakeLists.txt  converter.py  main.cpp  test_mesh.cpp
2D/serial/Champs_electrique_dans_pcb/: CMakeLists.txt  README.md  floating.msh  main.cpp  plot.py
2D/serial/Champs_electrique_dans_pcb/data/: sol.csv
2D/serial/Simple modelisation tissu/: CMakeLists.txt  Cas_reel.cpp  Disque.geo  README.md  conduction_simple.cpp  disque.msh  disque3D.msh  disque3D_2.msh  main.cpp  mesh.py  mesh_quad.geo  mesh_quad.msh  square.geo  square.msh  untitled.geo
2D/serial/data/: mesh.geo  mesh.msh  test2.msh  test3.msh
Loss Computation in Ferrites/: README.md  plot_2D_3D.py  plot_TimevsHarmo.py
Loss Computation in Ferrites/2D/: CmakeLists.txt  customcurl.cpp  get_curl.cpp  get_curl.hpp  main.cpp  measurement_comparison.py  multiple_tau.cpp  plot.py  plot_2.py  solver.cpp  solver.hpp  test.edp
Loss Computation in Ferrites/2D/Comparaison_TD_HD/: CmakeLists.txt  main.cpp  plot.py
Loss Computation in Ferrites/2D/Harmonic Domain/: CmakeLists.txt  main.cpp  measurement_comparison.py  multiple_tau.cpp  plolt_rho.py  plot_2.py  solver.cpp  solver.hpp
Loss Computation in Ferrites/2D/Harmonic Domain/computation_by_flux/: solver.cpp
Loss Computation in Ferrites/2D/Harmonic_Domain/: CmakeLists.txt  main.cpp  measurement_comparison.py  multiple_tau.cpp  plot_2.py  solver.cpp  solver.hpp
Loss Computation in Ferrites/2D/Time Domain/: CmakeLists.txt  main.cpp  main2.cpp  plot.py  solver.cpp
Loss Computation in Ferrites/2D/Time_Domain/: CmakeLists.txt  main.cpp  main2.cpp  plot.py  plot_by_flux.py  plot_test_phi.py  solver_TD.cpp  solver_TD.hpp
Loss Computation in Ferrites/2D/Time_Domain/Reduction POD/: CmakeLists.txt  README.md  main.cpp  main_test.cpp  plot_error.py  solver_TD_FOM.cpp  solver_TD_FOM.hpp
Loss Computation in Ferrites/2D/computation_by_flux/: CmakeLists.txt  main.cpp  solver.hpp
Loss Computation in Ferrites/2D/headers/: Ferrite.hpp  customcurl.hpp
Loss Computation in Ferrites/2D/source/: customcurl.cpp
Loss Computation in Ferrites/3D/: CmakeLists.txt  main.cpp  meas_N30_jan_2025.mat  measurement_comparison.py  plot.py
Loss Computation in Ferrites/Fitting permeability/: B_from_H.py  fitting.py  get_ratio.py
Loss Computation in Ferrites/Fitting permeability/data/15mT/: 100kHz.csv  150kHz.csv  200kHz.csv  250kHz.csv  300kHz.csv  351kHz.csv
Loss Computation in Ferrites/Harmonic_Domain/: CmakeLists.txt  comparisonPrinceton.py  compute_mu.cpp  main.cpp  measurement_comparison.py  plot.py  plot_2.py  princeton_sim.cpp  simHD.cpp  solver.cpp  solver.hpp
Loss Computation in Ferrites/Harmonic_Domain/data/MFEM/: Princeton_mfemN30_122.csv  Princeton_mfemN30_123.csv  Princeton_mfemN30_15.csv  Princeton_mfemN30_50.csv  Princeton_mfemN30_78.csv  Princeton_mfemN87_14.csv  Princeton_mfemN87_15.csv  Princeton_mfemN87_17.csv  Princeton_mfemN87_19.csv  unipg_mfemN30_10.csv  unipg_mfemN30_20.csv  unipg_mfemT38_10.csv  unipg_mfemT38_20.csv
Loss Computation in Ferrites/Harmonic_Domain/data/Princeton/N30/: N30-Sinusoidal_Phi_123.csv  N30-Sinusoidal_Phi_15.csv  N30-Sinusoidal_Phi_50.csv  N30-Sinusoidal_Phi_78.csv
Loss Computation in Ferrites/Harmonic_Domain/data/Princeton/N87/: N87-Sinusoidal_Phi_14.csv  N87-Sinusoidal_Phi_15.csv  N87-Sinusoidal_Phi_17.csv  N87-Sinusoidal_Phi_19.csv
Loss Computation in Ferrites/Harmonic_Domain/data/UNIPG/: meas_T38_jan_2025.mat  measurement_N87.mat
Loss Computation in Ferrites/Harmonic_Domain/plots/: compute.py  compute_and_plot.py  compute_and_plot_Princeton.py
Loss Computation in Ferrites/Time_Domain/: CmakeLists.txt  main.cpp  plot.py  plot_by_flux.py  plot_by_v.py  plot_test_phi.py  solver_TD.cpp  solver_TD.hpp  system_identification.m
Loss Computation in Ferrites/Time_Domain/Reduction POD/: main.cpp  main_test.cpp  plot_error.py  solver_TD_FOM.cpp
Loss Computation in Ferrites/headers/: Ferrite.hpp
Loss Computation in Ferrites/mesh/: N87_P.geo  pave.msh  pavé.geo  square.geo  square.msh  square2.msh  square_Princeton.geo  square_Princeton.msh  square_round.geo  square_round.msh  test.geo  test.msh  test_torre.geo  test_torre.msh  torre.msh  torre_carre.geo  torre_carre.msh
Loss Computation in Ferrites/source/: customcurl.cpp
Mesh Generation/CGAL Compilation test/: CMakeLists.txt  heart.cpp  mesh_3D_image.cpp
Mesh Generation/body_mesh_genration/: CMakeLists.txt  hand.mat  import_mfem.cpp  main.cpp
Phantom/CGAL Compilation test/: CMakeLists.txt  heart.cpp
Phantom/head/: CMakeLists.txt  exportVoxel.py  generateMesh.cpp  import_mfem.cpp  main.cpp  readMatData.cpp  tete.mat
electrosurgical_tissue_damage/: CMakeLists.txt  Disque.geo  Disque2.msh  main.cpp  solver.cpp  solver.hpp  square.geo
electrosurgical_tissue_damage/3D/: main.cpp  mesh.msh  pavé.geo  solver.cpp  solver.hpp  sphere.geo
electrosurgical_tissue_damage/Bipolar Electrosurgical Cautery/: README.md  main.cpp  meshOnshape.msh  mesh_manipulation.py  new_mesh.msh  new_mesh2.msh  new_mesh2_export.msh  plot.py  rect.msh  rect3D.geo  solver.cpp  solver.hpp  square.geo
electrosurgical_tissue_damage/Bipolar Electrosurgical Cautery/meshs/: Bipolar Cautery model export.geo  Bipolar Cautery model.geo  Bipolar Cautery model.step  Bipolar_Cautery_model.msh  mesh.msh  new_mesh2.msh
electrosurgical_tissue_damage/source_term_by_function/: CMakeLists.txt  Disque2.msh  main.cpp  solver.cpp  solver.hpp
electrosurgical_tissue_damage/source_term_by_mfem/: disque.msh  main.cpp  solver.cpp  solver.hpp  square.msh
myenv/: affichage_python.py  pyvenv.cfg
